--- a/src/components/Read/style.css
+++ b/src/components/Read/style.css
@@ -82,10 +82,6 @@ label {
 
 .formData {
     width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    gap: 1.5rem;
     margin: 3rem 0;
 }
 
@@ -123,8 +119,6 @@ input {
 
 
 .dataSelect__input {
-    display: flex;
-    align-items: center;
     text-align: left;
     gap: 1rem;
 }
@@ -133,20 +127,38 @@ input {
     width: 100px;
 }
 
-.dataSelect, .btnChange {
+.dataSelect {
+    width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-}
-
-.dataSelect {
-    width: 60%;
+    gap: 1.5vmin;
 }
 
 
 .btnChange {
-    align-items: flex-end;
-    width: 40%;
+    width: 100%;
+    display: flex;
+    gap: 2vmin;
+}
+
+.tableArea {
+    margin: 2vmin 0;
+}
+
+.tableArea, tr, td{
+    width: 100%;
+    padding: 0.2px;
+}
+
+.tableArea, th  {
+    border-collapse: collapse;
+    border: 1px solid #03588C; 
+}
+
+tr {
+    border-collapse: collapse;
+    background-color: #03588C;
+    color: #fff;
 }
 
 .inputGrow {
