Worked with the logics of read to return the data correctly, done some css to stylish the page and managed the data to illustrate the work it supossed to happen in the registration screen

--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -1,4 +1,4 @@
-.btnPages, .btnPagesLeave {
+.btnPages {
     align-items: center;
     background-color: #03588C;
     border-radius: 25px;
@@ -19,15 +19,6 @@
 
 .btnPages {
     width: 100%;
-}
-
-.btnPagesLeave {
-    width: 100px;
-}
-
-.btnLeaveArea {
-    display: flex;
-    justify-content: flex-end;
 }
 
 .imgSvg {
