--- a/src/components/Create/style.css
+++ b/src/components/Create/style.css
@@ -4,6 +4,13 @@
     padding: 0;
 }
 
+.backHome {
+    text-decoration: none;
+    font-style: none;
+    background-color: #F28322;
+    color: #FFF;
+}
+
 .create {
     background-color: #fff;
     width: 100%;
@@ -70,19 +77,6 @@ label {
     margin: 1rem 0;
 }
 
-button {
-    color: #FFF;
-    text-transform: capitalize;
-    background-color: #F28322;
-    width: 70%;
-    padding: 0.5rem 0;
-    border-radius: 25px;
-    font-size: 1.2rem;
-    border: none;
-    box-shadow: 3px 3px 4px rgba(0,0,0,0.4);
-    cursor: pointer;
-}
-
 input, select {
     flex-grow: 1;
     height: auto;
@@ -90,3 +84,22 @@ input, select {
     border: none;
     border-bottom: 1px solid #F28322;    
 }
+
+.btnPageLeave {
+    background-color: #024168;
+    border-radius: 25px;
+    border: none;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 2.5);
+    color: #fff;
+    display: flex;
+    font-size: 2.5vmin;
+    font-weight: 100;
+    gap: 1rem;
+    padding: 0.5rem 0;
+    justify-content: center;
+    text-decoration: none;
+    text-transform: lowercase;
+    margin: 0;
+    width: 100px;
+}
+
